--- a/togotop/index.html
+++ b/togotop/index.html
@@ -7,10 +7,16 @@
   
   <title>Togotop</title>
 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
   
+  <h1>Hello World!</h1>
+
 </body>
 </html>
