--- a/togotop/index.html
+++ b/togotop/index.html
@@ -17,74 +17,78 @@
 <body>
   
   <header class="main-header">
-    <div class="main-header__header">
-      <div class="main-header__logo">
-        <img src="img/logo.png" alt="Togotop - Продвижение товаров на Wildberries" class="logo main-header__logo">
-        <p class="main-header__description">Продвижение товаров на Wildberries</p>
-      </div>
-      <div class="user-navigation main-header__user-navigation">
-        <a href="#" class="user-navigation__link user-navigation__link_login">Войти</a>
-        <a href="#" class="user-navigation__link user-navigation__link_regisrer">Зарегистрироваться</a>
-      </div>
-    </div>
-    <nav class="main-nav main-header__nav">
-      <a href="#" class="main-nav__link">Как это работает</a>
-      <ul class="main-nav__list">
-        <li class="main-nav__item">
-          <a href="#" class="main-nav__link">Сервисы</a>
-        </li>
-      </ul>
-      <a href="#" class="main-nav__link">Тарифы</a>
-      <a href="#" class="main-nav__link main-nav__link_green">Переезд на TOGOTOP</a>
-      <ul class="main-nav__list">
-        <li class="main-nav__item">
-          <a href="#" class="main-nav__link">Партнёрам</a>
-        </li>
-      </ul>
-      <a href="#" class="main-nav__link">Помощь</a>
-    </nav>
-    <div class="main-intro main-header__intro">
-      <div class="main-intro__col">
-        <h1 class="main-intro__title">С TOGOTOP <span class="main-intro__title_purple">ваши товары</span> всегда будут в <span class="main-intro__title_green">ТОПе</span></h1>
-        <p class="main-intro__text">Полный набор инструментов для продвижения на Wildberries, которые выведут ваш бизнес на новый уровень.</p>
-        <button class="main-intro__button">Попробовать бесплатно</button>
-      </div>
-      <div class="main-intro__col">
-        <div class="product-preview">
-          <img src="img/icons/product-preview.png" alt="" class="product-preview__image">
+    <div class="container">
+      <div class="main-header__header">
+        <div class="main-header__logo">
+          <img src="img/logo.png" alt="Togotop - Продвижение товаров на Wildberries" class="logo main-header__logo">
+          <p class="main-header__description">Продвижение товаров на Wildberries</p>
+        </div>
+        <div class="user-navigation main-header__user-navigation">
+          <a href="#" class="user-navigation__link user-navigation__link_login">Войти</a> 
+          <a href="#" class="user-navigation__link user-navigation__link_register">Зарегистрироваться</a>
         </div>
       </div>
-    </div>
-    <div class="main-stats main-header__stats">
-      <div class="main-stats__item">
-        <div class="main-stats__nums">
-          <div class="main-stats__num">3</div>
-          <div class="main-stats__num">1</div>
-          <div class="main-stats__num">9</div>
-          <div class="main-stats__num">6</div>
+      <nav class="main-nav main-header__nav">
+        <a href="#" class="main-nav__link">Как это работает</a>
+        <ul class="main-nav__list">
+          <li class="main-nav__item">
+            <a href="#" class="main-nav__link">Сервисы</a>
+          </li>
+        </ul>
+        <a href="#" class="main-nav__link">Тарифы</a>
+        <a href="#" class="main-nav__link main-nav__link_green">Переезд на TOGOTOP</a>
+        <ul class="main-nav__list">
+          <li class="main-nav__item">
+            <a href="#" class="main-nav__link">Партнёрам</a>
+          </li>
+        </ul>
+        <a href="#" class="main-nav__link">Помощь</a>
+      </nav>
+      <div class="main-intro main-header__intro">
+        <div class="main-intro__col">
+          <h1 class="main-intro__title">С TOGOTOP <span class="main-intro__title_purple">ваши товары</span> всегда будут в <span class="main-intro__title_green">ТОПе</span></h1>
+          <p class="main-intro__text">Полный набор инструментов для продвижения на Wildberries, которые выведут ваш бизнес на новый уровень.</p>
+          <button class="button button_action main-intro__button">Попробовать бесплатно</button>
         </div>
-        <p class="main-stats__text">Зарегистрировались на сервисе</p>
+        <div class="main-intro__col">
+          <div class="product-preview">
+            <img src="img/icons/product-preview.png" alt="" class="product-preview__image">
+          </div>
+        </div>
       </div>
-      <div class="main-stats__item">
-        <div class="main-stats__nums">
-          <div class="main-stats__num">3</div>
-          <div class="main-stats__num">1</div>
-          <div class="main-stats__num">9</div>
-          <div class="main-stats__num">7</div>
-          <div class="main-stats__num">5</div>
-          <div class="main-stats__num">8</div>
+      <div class="main-stats main-header__stats">
+        <div class="main-stats__wrapper">
+          <div class="main-stats__item main-stats__item_green">
+            <div class="main-stats__nums">
+              <div class="main-stats__num">3</div>
+              <div class="main-stats__num">1</div>
+              <div class="main-stats__num">9</div>
+              <div class="main-stats__num">6</div>
+            </div>
+            <p class="main-stats__text">Зарегистрировались на сервисе</p>
+          </div>
+          <div class="main-stats__item main-stats__item_purple">
+            <div class="main-stats__nums">
+              <div class="main-stats__num">3</div>
+              <div class="main-stats__num">1</div>
+              <div class="main-stats__num">9</div>
+              <div class="main-stats__num">7</div>
+              <div class="main-stats__num">5</div>
+              <div class="main-stats__num">8</div>
+            </div>
+            <p class="main-stats__text">Сделаных выкупов</p>
+          </div>
+          <div class="main-stats__item main-stats__item_green">
+            <div class="main-stats__nums">
+              <div class="main-stats__num">3</div>
+              <div class="main-stats__num">1</div>
+              <div class="main-stats__num">9</div>
+              <div class="main-stats__num">7</div>
+              <div class="main-stats__num">8</div>
+            </div>
+            <p class="main-stats__text">Действий с товарами</p>
+          </div>
         </div>
-        <p class="main-stats__text">Сделаных выкупов</p>
-      </div>
-      <div class="main-stats__item">
-        <div class="main-stats__nums">
-          <div class="main-stats__num">3</div>
-          <div class="main-stats__num">1</div>
-          <div class="main-stats__num">9</div>
-          <div class="main-stats__num">7</div>
-          <div class="main-stats__num">8</div>
-        </div>
-        <p class="main-stats__text">Действий с товарами</p>
       </div>
     </div>
   </header>
