--- a/togotop/index.html
+++ b/togotop/index.html
@@ -92,6 +92,44 @@
       </div>
     </div>
   </header>
+  <main class="main">
+    <section class="opportunities main__opportunities">
+      <div class="container">
+        <h2 class="section-title opportunities__title">Возможности <span class="section-title_green">сервиса</span></h2>
+      </div>
+    </section>
+    <section class="features main__features">
+      <div class="container">
+        <h2 class="section-title features__title">Проблемы, которые <span class="section-title_green">решает TOGOTOP</span></h2>
+        <div class="tabs features__tabs">
+          <div class="tabs__header">
+            <ul class="tabs__list">
+              <li class="tabs__element tabs__element_active">Маштабирование</li>
+              <li class="tabs__element">Автоматизация</li>
+              <li class="tabs__element">Репутация</li>
+              <li class="tabs__element">Аналитика</li>
+            </ul>
+          </div>
+          <div class="tabs__body">
+            <div class="tabs__content" data-content="1">
+              <img class=" tabs__image" src="img/icons/computer.svg" alt="">
+              <div class="tabs__info">
+                <h3 class="tabs__title">Увеличение объема продаж</h3>
+                <p class="tabs__text"><span class="tabs__text_purple">Проблема</span>: нет понимания, как масштабировать 
+                  свой бизнес на Wildberries.</p>
+                <p class="tabs__text"><span class="tabs__text_green">Решение</span>: в TOGOTOP есть все инструменты 
+                  для продвиже ния товарных карточек 
+                  в ТОП категорий маркетплейса.</p>
+              </div>
+            </div>
+            <div class="tabs__content" data-content="2"></div>
+            <div class="tabs__content" data-content="3"></div>
+            <div class="tabs__content" data-content="4"></div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
 
 </body>
 </html>
